# POC-PortAudio_and_Compressor

./: .gitignore  README.md  meson.build
Compression test files/Cassius 1999/: compressed_audio_cassius_1999.wav.reapeaks  original_audio_cassius_1999.wav.reapeaks
Graph test/: graph.py  graph_compression_no_knee_dB.json  graph_compression_no_knee_lin.json  graph_compression_with_knee_dB.json  graph_compression_with_knee_lin.json  graph_no_compression_dB.json  graph_no_compression_lin.json  test.cpp
include/: Compressor.h  StreamHandler.h  WavCreator.h  WavRecorder.h
src/: Compressor.cpp  StreamHandler.cpp  WavCreator.cpp  WavRecorder.cpp  main.cpp  mainOnly.cpp
